@@ -1,5 +1,12 @@
 2006-04-04  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/launcher.c (clean_childs): Remove handling of WCOREDUMP.
+	* launcher/invoker.c (main): Return the exit code from status when
+	exiting, or raise the signal. Thanks to Marius Vollmer for noticing.
+	* TODO: Remove item.
+
+2006-04-04  Guillem Jover  <guillem.jover@nokia.com>
+
 	* configure.ac (EXTRA_DEPENDS): Remove disappeared hildon-lgpl.
 
 2006-04-04  Guillem Jover  <guillem.jover@nokia.com>
